Change logo link

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
   <header>
     <a href="index.html">
-      <img src="/Akademnashr/image/logo.svg" alt="logo-1" width="227" height="60">
+      <img src="image/logo.svg" alt="logo-1" width="227" height="60">
     </a>
     <nav>
       <ul>
@@ -76,7 +76,7 @@
     <footer>
       <div>
        <a href="index.html">
-         <img src="/Akademnashr/image/logo.svg" alt="logo-1" width="227" height="60">
+         <img src="image/logo.svg" alt="logo-1" width="227" height="60">
        </a>
       <!-- IJTIMOIY TARMOQLAR -->
       <ul>
