--- a/index.html
+++ b/index.html
@@ -4,30 +4,33 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Akademnashr</title>
+  <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
   <!-- SITE HEADER -->
 
-  <header>
-    <a href="index.html">
+  <header class="header">
+    <div>
+    <a class="nav-logo" href="index.html">
       <img src="image/logo.svg" alt="logo-1" width="227" height="60">
     </a>
-    <nav>
-      <ul>
-        <li><a href="index.html">Bosh sahifa</a></li>
-        <li><a href="#">Kitoblar </a></li>
+    <nav class="nav-menu">
+      <ul class="menu-links">
+        <li class="menu-link"><a href="index.html">Bosh sahifa</a></li>
+        <li class="menu-link"><a href="#">Kitoblar </a></li>
         <li><a href="#">Aksiyalar</a></li>
         <li><a href="#">Kontaktlar</a></li>
         <li><a href="#">Ro’yxatdan o’tish</a></li>
       </ul>
     </nav>
+    </div>
   </header>
 
   <main>
     <!-- HERO -->
-    <section>
+    <section class="main">
       <div>
-        <hr>
+        <hr class="hr">
         <h2>Pythonda dasturlash asoslari</h2>
         <p>Dasturlash asoslariga oid o‘zbek tilidagi ilk eng mukammal qo‘llanma. Kitobning har bir bo‘limi uchun maxsus video darslar yozilgan bo‘lib, ularga kitobda ko‘rsatilgan QR kod orqali o‘tish mumkin.</p>
         <a href="#">Buyurtma berish</a>
