--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
       <img src="image/logo.svg" alt="logo-1" width="227" height="60">
     </a>
     <nav class="nav-menu">
-      <ul class="menu-links">
-        <li class="menu-link"><a href="index.html">Bosh sahifa</a></li>
-        <li class="menu-link"><a href="#">Kitoblar </a></li>
+      <ul>
+        <li><a href="index.html">Bosh sahifa</a></li>
+        <li><a href="#">Kitoblar </a></li>
         <li><a href="#">Aksiyalar</a></li>
         <li><a href="#">Kontaktlar</a></li>
-        <li><a href="#">Ro’yxatdan o’tish</a></li>
+        <li><a class="nav-link" href="#">Ro’yxatdan o’tish</a></li>
       </ul>
     </nav>
     </div>
@@ -28,18 +28,18 @@
 
   <main>
     <!-- HERO -->
-    <section class="main">
-      <div>
-        <hr class="hr">
-        <h2>Pythonda dasturlash asoslari</h2>
-        <p>Dasturlash asoslariga oid o‘zbek tilidagi ilk eng mukammal qo‘llanma. Kitobning har bir bo‘limi uchun maxsus video darslar yozilgan bo‘lib, ularga kitobda ko‘rsatilgan QR kod orqali o‘tish mumkin.</p>
-        <a href="#">Buyurtma berish</a>
+    <section class="main-hero">
+      <div class="main-hero-text">
+        <hr>
+        <h2 class="main-python-text">Pythonda dasturlash asoslari</h2>
+        <p class="main-information">Dasturlash asoslariga oid o‘zbek tilidagi ilk eng mukammal qo‘llanma. Kitobning har bir bo‘limi uchun maxsus video darslar yozilgan bo‘lib, ularga kitobda ko‘rsatilgan QR kod orqali o‘tish mumkin.</p>
+        <a class="main-link" href="#">Buyurtma berish</a>
       </div>
-      <img src="image/python-book.jpg" alt="python-book" width="510" height="510" srcset="image/python-book.jpg 1x, image/python-book@2x.jpg 2x">
+      <img class="main-img" src="image/python-book.jpg" alt="python-book" width="510" height="510" srcset="image/python-book.jpg 1x, image/python-book@2x.jpg 2x">
     </section>
 
     <!-- FEATURES -->
-    <section>
+    <section class="main-features">
       <hr>
       <h2>Nega aynan <br> Akademnashr?</h2>
       <ul>
