--- a/index.html
+++ b/index.html
@@ -41,22 +41,22 @@
     <!-- FEATURES -->
     <section class="main-features">
       <hr>
-      <h2>Nega aynan <br> Akademnashr?</h2>
-      <ul>
-        <li>
-          <img src="image/icon-cursor-click.svg" alt="" width="56" height="56">
-          <h3>Oson buyurtma qilish</h3>
-          <p>Akademnashr.uz saytidan o’zingizga yoqqan kitobni sodda usulda buyurtma qila olasiz.</p>
+      <h2 class="main-features-text">Nega aynan <br> Akademnashr?</h2>
+      <ul class="main-features-information">
+        <li class="main-featues-about">
+          <img class="main-icon" src="image/icon-cursor-click.svg" alt="" width="56" height="56">
+          <h3 class="features-booking">Oson buyurtma qilish</h3>
+          <p class="features-about-text">Akademnashr.uz saytidan o’zingizga yoqqan kitobni sodda usulda buyurtma qila olasiz.</p>
         </li>
-        <li>
-            <img src="image/icon-sparkles.svg" alt="" width="56" height="56">
-            <h3>Eng sara kitoblar</h3>
-            <p>Trenddagi eng ommabop, turli auditoriyalarga mo’ljallangan har xil janrdagi kitoblarni topa olasiz.</p>
+        <li class="main-featues-about">
+            <img class="main-icon"  src="image/icon-sparkles.svg" alt="" width="56" height="56">
+            <h3 class="features-books">Eng sara kitoblar</h3>
+            <p class="features-about-text">Trenddagi eng ommabop, turli auditoriyalarga mo’ljallangan har xil janrdagi kitoblarni topa olasiz.</p>
         </li>
-        <li>
-            <img src="image/icon-lightning-bolt.svg" alt="" width="56" height="56">
-            <h3>Tez yetkazib berish</h3>
-            <p>O’zbekistonning ixtiyoriy hududiga 3 ish kuni ichida, xalqaro buyurtmalarni 10 ish kuni ichida yetkazib beriladi.</p>
+        <li class="main-featues-about">
+            <img class="main-icon" src="image/icon-lightning-bolt.svg" alt="" width="56" height="56">
+            <h3 class="features-delivery">Tez yetkazib berish</h3>
+            <p class="features-about-text">O’zbekistonning ixtiyoriy hududiga 3 ish kuni ichida, xalqaro buyurtmalarni 10 ish kuni ichida yetkazib beriladi.</p>
         </li>
       </ul>
     </section>
