--- a/index.html
+++ b/index.html
@@ -9,77 +9,80 @@
 <body>
   <!-- SITE HEADER -->
 
-  <header class="header">
-    <div class="nav-menu" >
-    <a class="nav-logo" href="index.html">
-      <img src="image/logo.svg" alt="logo-1" width="227" height="60">
+  <header class="site-header">
+    <a href="index.html">
+      <img src="image/logo.svg" alt="Akademnashr logo" width="227" height="60">
     </a>
-    <nav class="nav--menu-links">
-      <ul class="nav-links">
-        <li><a class="nav-link" href="index.html">Bosh sahifa</a></li>
-        <hr class="nav-hr">
-        <li><a class="nav-link" href="#">Kitoblar </a></li>
-        <li><a class="nav-link" href="#">Aksiyalar</a></li>
-        <li><a class="nav-link" href="#">Kontaktlar</a></li>
-        <li><a class="nav-link-sign-up" href="#">Ro’yxatdan o’tish</a></li>
+
+    <nav>
+      <ul>
+        <li><a class="sitenav-link" href="index.html">Bosh sahifa</a></li>
+        <li><a class="sitenav-link" href="#">Kitoblar </a></li>
+        <li><a class="sitenav-link" href="#">Aksiyalar</a></li>
+        <li><a class="sitenav-link" href="#">Kontaktlar</a></li>
       </ul>
     </nav>
-    </div>
+    <a class="main-link"  href="#">Ro’yxatdan o’tish</a>
   </header>
 
   <main>
     <!-- HERO -->
-    <section class="main-hero">
-      <div class="main-hero-text">
-        <hr>
-        <h2 class="main-python-text">Pythonda dasturlash asoslari</h2>
-        <p class="main-information">Dasturlash asoslariga oid o‘zbek tilidagi ilk eng mukammal qo‘llanma. Kitobning har bir bo‘limi uchun maxsus video darslar yozilgan bo‘lib, ularga kitobda ko‘rsatilgan QR kod orqali o‘tish mumkin.</p>
+    <section class="hero">
+      <div class="hero-content">
+        <hr class="orange-line">
+        <h2 class="hero-heading">Pythonda dasturlash asoslari</h2>
+        <p class="hero-text">Dasturlash asoslariga oid o‘zbek tilidagi ilk eng mukammal qo‘llanma. Kitobning har bir bo‘limi uchun maxsus video darslar yozilgan bo‘lib, ularga kitobda ko‘rsatilgan QR kod orqali o‘tish mumkin.</p>
         <a class="main-link" href="#">Buyurtma berish</a>
       </div>
-      <img class="main-img" src="image/python-book.jpg" alt="python-book" width="510" height="510" srcset="image/python-book.jpg 1x, image/python-book@2x.jpg 2x">
+      <img class="hero-img" src="image/python-book.jpg" alt="python-book" width="510" height="510" srcset="image/python-book.jpg 1x, image/python-book@2x.jpg 2x">
     </section>
 
     <!-- FEATURES -->
-    <section class="main-features">
-      <hr>
-      <h2 class="main-features-text">Nega aynan <br> Akademnashr?</h2>
-      <ul class="main-features-information">
-        <li class="main-featues-about">
-          <img class="main-icon" src="image/icon-cursor-click.svg" alt="" width="56" height="56">
-          <h3 class="features-booking">Oson buyurtma qilish</h3>
-          <p class="features-about-text">Akademnashr.uz saytidan o’zingizga yoqqan kitobni sodda usulda buyurtma qila olasiz.</p>
+    <section class="features">
+      <hr class="orange-line">
+      <h2 class="features-heading">Nega aynan <br> Akademnashr?</h2>
+      <ul>
+        <li class="feature">
+          <div class="feature-icon-wrapper">
+            <img src="image/icon-cursor-click.svg" alt="" width="56" height="56">
+          </div>
+          <h3 class="feature-title">Oson buyurtma qilish</h3>
+          <p class="feature-info">Akademnashr.uz saytidan o’zingizga yoqqan kitobni sodda usulda buyurtma qila olasiz.</p>
         </li>
-        <li class="main-featues-about">
-            <img class="main-icon"  src="image/icon-sparkles.svg" alt="" width="56" height="56">
-            <h3 class="features-books">Eng sara kitoblar</h3>
-            <p class="features-about-text">Trenddagi eng ommabop, turli auditoriyalarga mo’ljallangan har xil janrdagi kitoblarni topa olasiz.</p>
+        <li class="feature">
+            <div class="feature-icon-wrapper">
+              <img  src="image/icon-sparkles.svg" alt="" width="56" height="56">
+            </div>
+            <h3 class="feature-title">Eng sara kitoblar</h3>
+            <p class="feature-info">Trenddagi eng ommabop, turli auditoriyalarga mo’ljallangan har xil janrdagi kitoblarni topa olasiz.</p>
         </li>
-        <li class="main-featues-about">
-            <img class="main-icon" src="image/icon-lightning-bolt.svg" alt="" width="56" height="56">
-            <h3 class="features-delivery">Tez yetkazib berish</h3>
-            <p class="features-about-text">O’zbekistonning ixtiyoriy hududiga 3 ish kuni ichida, xalqaro buyurtmalarni 10 ish kuni ichida yetkazib beriladi.</p>
+        <li class="feature">
+            <div class="feature-icon-wrapper">
+              <img src="image/icon-lightning-bolt.svg" alt="" width="56" height="56">
+            </div>
+            <h3 class="feature-title">Tez yetkazib berish</h3>
+            <p class="feature-info">O’zbekistonning ixtiyoriy hududiga 3 ish kuni ichida, xalqaro buyurtmalarni 10 ish kuni ichida yetkazib beriladi.</p>
         </li>
       </ul>
     </section>
 
     <!-- AKSIYA -->
-    <section class="children-books">
-      <div class="children-information">
-        <h2 class="children-books-about">Bolalar kitoblari uchun
+    <section class="promo">
+      <div class="promo-content">
+        <h2 class="promo-heading">Bolalar kitoblari uchun
         ajoyib aksiya!</h2>
-        <p class="history-book">Ertaklar, she’rlar, sarguzasht asarlar, fikrlashni o’stirish uchun turli mashq qo’llanmalari va komikslar.</p>
-        <p class="book-cheap">Aksiyadagi eng katta to’plamda <strong class="books-color">50 ta kitob</strong>ni <strong class="books-color" >350 ming</strong> so’mga (aslida 383 ming so’m) sotib olishingiz mumkin.</p>
-         <a class="book-buy" href="#">Buyurtma berish</a>
+        <p class="promo-text">Ertaklar, she’rlar, sarguzasht asarlar, fikrlashni o’stirish uchun turli mashq qo’llanmalari va komikslar.</p>
+        <p class="promo-text">Aksiyadagi eng katta to’plamda <strong class="promo-highlight">50 ta kitob</strong>ni <strong class="promo-highlight" >350 ming</strong> so’mga (aslida 383 ming so’m) sotib olishingiz mumkin.</p>
+         <a class="main-link" href="#">Buyurtma berish</a>
       </div>
 
-        <img class="children-books-img" src="image/sale-img.jpg" alt="kitoblar to`plami" width="440" height="440" srcset="image/sale-img.jpg 1x, image/sale-img@2x.jpg 2x">
+        <img class="promo-img" src="image/sale-img.jpg" alt="kitoblar to`plami" width="440" height="440" srcset="image/sale-img.jpg 1x, image/sale-img@2x.jpg 2x">
     </section>
   </main>
 
     <!-- SITE FOOTER -->
-    <footer class="footer">
+    <footer class="site-footer">
       <div>
-       <div class="footer-menu">
          <a href="index.html">
            <img class="footer-logo" src="image/logo.svg" alt="logo-1" width="227" height="60">
          </a>
@@ -101,12 +104,12 @@
            </a>
           </li>
          </ul>
-    </div>
+      </div>
 
-
-        <hr class="footer-hr">
+        <hr class="site-footer-divider">
 
         <!-- LINKLAR -->
+      <div>
         <ul class="footer-links">
           <li class="footer-link"><a class="footer-link-text" href="#">Bosh sahifa</a></li>
           <li class="footer-link"><a class="footer-link-text" href="#">Kitoblar</a></li>
