--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     </a>
 
     <nav>
-      <ul>
+      <ul class="sitenav-list">
         <li><a class="sitenav-link" href="index.html">Bosh sahifa</a></li>
         <li><a class="sitenav-link" href="#">Kitoblar </a></li>
         <li><a class="sitenav-link" href="#">Aksiyalar</a></li>
@@ -84,10 +84,10 @@
     <footer class="site-footer">
       <div>
          <a href="index.html">
-           <img class="footer-logo" src="image/logo.svg" alt="logo-1" width="227" height="60">
+           <img  src="image/logo.svg" alt="Akademnashr logo" width="227" height="60">
          </a>
        <!-- IJTIMOIY TARMOQLAR -->
-        <ul class="footer-icons">
+        <ul>
           <li>
            <a href="https://t.me/Akademnashr" target="_blank">
              <svg width="24" height="24" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M12 0C5.376 0 0 5.376 0 12s5.376 12 12 12 12-5.376 12-12S18.624 0 12 0Zm5.568 8.16c-.18 1.896-.96 6.504-1.356 8.628-.168.9-.504 1.2-.816 1.236-.696.06-1.224-.456-1.896-.9-1.056-.696-1.656-1.128-2.676-1.8-1.188-.78-.42-1.212.264-1.908.18-.18 3.252-2.976 3.312-3.228a.24.24 0 0 0-.06-.216c-.072-.06-.168-.036-.252-.024-.108.024-1.788 1.14-5.064 3.348-.48.324-.912.492-1.296.48-.432-.012-1.248-.24-1.86-.444-.756-.24-1.344-.372-1.296-.792.024-.216.324-.432.888-.66 3.504-1.524 5.832-2.532 6.996-3.012 3.336-1.392 4.02-1.632 4.476-1.632.096 0 .324.024.468.144.12.096.156.228.168.324-.012.072.012.288 0 .456Z" fill="#252420"/></svg>
@@ -110,12 +110,14 @@
 
         <!-- LINKLAR -->
       <div>
-        <ul class="footer-links">
+        <ul class="site-footer-links">
           <li class="footer-link"><a class="footer-link-text" href="#">Bosh sahifa</a></li>
           <li class="footer-link"><a class="footer-link-text" href="#">Kitoblar</a></li>
           <li class="footer-link"><a class="footer-link-text" href="#">Aksiyalar</a></li>
           <li class="footer-link"><a class="footer-link-text" href="#">Yangiliklar</a></li>
           <li class="footer-link"><a class="footer-link-text" href="#">Kontaktlar</a></li>
+        </ul>
+        <ul class="site-footer-links">
           <li class="footer-link"><a class="footer-link-text" href="#">Ilmiy nashrlar</a></li>
           <li class="footer-link"><a class="footer-link-text" href="#">Ilmiy-ommabop nashrlar</a></li>
           <li class="footer-link"><a class="footer-link-text" href="#">Ma’rifiy Lug’atlar</a></li>
@@ -123,6 +125,8 @@
           <li class="footer-link"><a class="footer-link-text" href="#">Adabiy-badiiy nashrlar</a></li>
           <li class="footer-link"><a class="footer-link-text" href="#">Abituriyentlar uchun</a></li>
           <li class="footer-link"><a class="footer-link-text" href="#">Bolalar uchun</a></li>
+        </ul>
+        <ul class="site-footer-links">
           <li class="footer-link"><a class="footer-link-text" href="#">Ko’p so’raladigan savollar</a></li>
           <li class="footer-link"><a class="footer-link-text" href="#">Yetkazib berish haqida</a></li>
           <li class="footer-link"><a class="footer-link-text" href="#">To’lov usullari haqida</a></li>
