--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
       <img src="image/logo.svg" alt="Akademnashr logo" width="227" height="60">
     </a>
 
+  <!-- SITENAV -->
     <nav>
       <ul class="sitenav-list">
         <li><a class="sitenav-link" href="index.html">Bosh sahifa</a></li>
