--- a/index.html
+++ b/index.html
@@ -21,16 +21,19 @@
       <img src="image/logo.svg" alt="Akademnashr logo" width="227" height="60">
     </a>
 
-  <!-- SITENAV -->
-    <nav>
-      <ul class="sitenav-list">
-        <li><a class="sitenav-link" href="index.html">Bosh sahifa</a></li>
-        <li><a class="sitenav-link" href="#">Kitoblar </a></li>
-        <li><a class="sitenav-link" href="#">Aksiyalar</a></li>
-        <li><a class="sitenav-link" href="#">Kontaktlar</a></li>
-      </ul>
-    </nav>
-    <a class="main-link"  href="#">Ro’yxatdan o’tish</a>
+    <div class="site-header-actions">
+     <!-- SITENAV -->
+      <nav>
+        <ul class="sitenav-list">
+         <li><a class="sitenav-link" href="index.html">Bosh sahifa</a></li>
+         <li><a class="sitenav-link" href="#">Kitoblar </a></li>
+         <li><a class="sitenav-link" href="#">Aksiyalar</a></li>
+         <li><a class="sitenav-link" href="#">Kontaktlar</a></li>
+        </ul>
+      </nav>
+
+      <a class="main-link"  href="#">Ro’yxatdan o’tish</a>
+    </div>
   </header>
 
   <main>
@@ -39,9 +42,10 @@
       <div class="hero-content">
         <hr class="orange-line">
         <h2 class="hero-heading">Pythonda dasturlash asoslari</h2>
-        <p class="hero-text">Dasturlash asoslariga oid o‘zbek tilidagi ilk eng mukammal qo‘llanma. Kitobning har bir bo‘limi uchun maxsus video darslar yozilgan bo‘lib, ularga kitobda ko‘rsatilgan QR kod orqali o‘tish mumkin.</p>
+        <p class="hero-text">Dasturlash asoslariga oid o‘zbek tilidagi ilk eng mukammal qo‘llanma <br>  Kitobning har bir bo‘limi uchun maxsus video darslar yozilgan bo‘lib, <br> ularga kitobda ko‘rsatilgan QR kod orqali o‘tish mumkin.</p>
         <a class="main-link" href="#">Buyurtma berish</a>
       </div>
+
       <img class="hero-img" src="image/python-book.jpg" alt="python-book" width="510" height="510" srcset="image/python-book.jpg 1x, image/python-book@2x.jpg 2x">
     </section>
 
@@ -49,7 +53,8 @@
     <section class="features">
       <hr class="orange-line">
       <h2 class="features-heading">Nega aynan <br> Akademnashr?</h2>
-      <ul>
+
+      <ul class="features-list">
         <li class="feature">
           <div class="feature-icon-wrapper">
             <img src="image/icon-cursor-click.svg" alt="" width="56" height="56">
@@ -90,12 +95,13 @@
 
     <!-- SITE FOOTER -->
     <footer class="site-footer">
-      <div>
-         <a href="index.html">
+      <div class="site-footer-top">
+        <a href="index.html">
            <img  src="image/logo.svg" alt="Akademnashr logo" width="227" height="60">
-         </a>
-       <!-- IJTIMOIY TARMOQLAR -->
-        <ul>
+        </a>
+
+        <!-- IJTIMOIY TARMOQLAR -->
+        <ul class="site-footer-socials">
           <li>
            <a href="https://t.me/Akademnashr" target="_blank">
              <svg width="24" height="24" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M12 0C5.376 0 0 5.376 0 12s5.376 12 12 12 12-5.376 12-12S18.624 0 12 0Zm5.568 8.16c-.18 1.896-.96 6.504-1.356 8.628-.168.9-.504 1.2-.816 1.236-.696.06-1.224-.456-1.896-.9-1.056-.696-1.656-1.128-2.676-1.8-1.188-.78-.42-1.212.264-1.908.18-.18 3.252-2.976 3.312-3.228a.24.24 0 0 0-.06-.216c-.072-.06-.168-.036-.252-.024-.108.024-1.788 1.14-5.064 3.348-.48.324-.912.492-1.296.48-.432-.012-1.248-.24-1.86-.444-.756-.24-1.344-.372-1.296-.792.024-.216.324-.432.888-.66 3.504-1.524 5.832-2.532 6.996-3.012 3.336-1.392 4.02-1.632 4.476-1.632.096 0 .324.024.468.144.12.096.156.228.168.324-.012.072.012.288 0 .456Z" fill="#252420"/></svg>
@@ -111,33 +117,38 @@
              <svg width="24" height="24" fill="none" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" clip-rule="evenodd" d="M12 0C8.741 0 8.333.014 7.053.072 2.695.272.273 2.69.073 7.052.014 8.333 0 8.741 0 12c0 3.259.014 3.668.072 4.948.2 4.358 2.618 6.78 6.98 6.98C8.333 23.986 8.741 24 12 24c3.259 0 3.668-.014 4.948-.072 4.354-.2 6.782-2.618 6.979-6.98.059-1.28.073-1.689.073-4.948 0-3.259-.014-3.667-.072-4.947-.196-4.354-2.617-6.78-6.979-6.98C15.668.014 15.259 0 12 0Zm0 2.163c3.204 0 3.584.012 4.85.07 3.252.148 4.771 1.691 4.919 4.919.058 1.265.069 1.645.069 4.849 0 3.205-.012 3.584-.069 4.849-.149 3.225-1.664 4.771-4.919 4.919-1.266.058-1.644.07-4.85.07-3.204 0-3.584-.012-4.849-.07-3.26-.149-4.771-1.699-4.919-4.92-.058-1.265-.07-1.644-.07-4.849 0-3.204.013-3.583.07-4.849.149-3.227 1.664-4.771 4.919-4.919 1.266-.057 1.645-.069 4.849-.069ZM5.838 12a6.162 6.162 0 1 1 12.324 0 6.162 6.162 0 0 1-12.324 0ZM12 16a4 4 0 1 1 0-8 4 4 0 0 1 0 8Zm4.965-10.405a1.44 1.44 0 1 1 2.881.001 1.44 1.44 0 0 1-2.881-.001Z" fill="#252420"/></svg>
            </a>
           </li>
-         </ul>
+        </ul>
       </div>
 
-        <hr class="site-footer-divider">
+      <hr class="site-footer-divider">
 
-        <!-- LINKLAR -->
-      <div>
+      <!-- LINKLAR -->
+      <div class="site-footer-bottom">
         <ul class="site-footer-links">
-          <li class="footer-link"><a class="footer-link-text" href="#">Bosh sahifa</a></li>
-          <li class="footer-link"><a class="footer-link-text" href="#">Kitoblar</a></li>
-          <li class="footer-link"><a class="footer-link-text" href="#">Aksiyalar</a></li>
-          <li class="footer-link"><a class="footer-link-text" href="#">Yangiliklar</a></li>
-          <li class="footer-link"><a class="footer-link-text" href="#">Kontaktlar</a></li>
+          <li><a href="#">Bosh sahifa</a></li>
+          <li><a href="#">Kitoblar</a></li>
+          <li><a href="#">Aksiyalar</a></li>
+          <li><a href="#">Yangiliklar</a></li>
+          <li><a href="#">Kontaktlar</a></li>
         </ul>
         <ul class="site-footer-links">
-          <li class="footer-link"><a class="footer-link-text" href="#">Ilmiy nashrlar</a></li>
-          <li class="footer-link"><a class="footer-link-text" href="#">Ilmiy-ommabop nashrlar</a></li>
-          <li class="footer-link"><a class="footer-link-text" href="#">Ma’rifiy Lug’atlar</a></li>
-          <li class="footer-link"><a class="footer-link-text" href="#">Lug’atlar</a></li>
-          <li class="footer-link"><a class="footer-link-text" href="#">Adabiy-badiiy nashrlar</a></li>
-          <li class="footer-link"><a class="footer-link-text" href="#">Abituriyentlar uchun</a></li>
-          <li class="footer-link"><a class="footer-link-text" href="#">Bolalar uchun</a></li>
+          <li><a href="#">Ilmiy nashrlar</a></li>
+          <li><a href="#">Ilmiy-ommabop nashrlar</a></li>
+          <li><a href="#">Ma’rifiy Lug’atlar</a></li>
+          <li><a href="#">Lug’atlar</a></li>
+          <li><a href="#">Adabiy-badiiy nashrlar</a></li>
+          <li><a href="#">Abituriyentlar uchun</a></li>
+          <li><a href="#">Bolalar uchun</a></li>
         </ul>
         <ul class="site-footer-links">
-          <li class="footer-link"><a class="footer-link-text" href="#">Ko’p so’raladigan savollar</a></li>
-          <li class="footer-link"><a class="footer-link-text" href="#">Yetkazib berish haqida</a></li>
-          <li class="footer-link"><a class="footer-link-text" href="#">To’lov usullari haqida</a></li>
+          <li><a href="#">Ko’p so’raladigan savollar</a></li>
+          <li><a href="#">Yetkazib berish haqida</a></li>
+          <li><a href="#">To’lov usullari haqida</a></li>
+        </ul>
+        <ul class="site-footer-links">
+          <li><a href="#">Bo`sh ish o`rinlari</a></li>
+          <li><a href="#">Biz bilan bog`lanish</a></li>
+          <li><a href="#">Maxfiylik nizomi</a></li>
         </ul>
       </div>
     </footer>
